--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,7 +25,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y chromium-browser
           sudo apt-get install -y chromium-chromedriver
-          if [ ! -f /usr/bin/chromedriver ]; then
+          if [ ! -L /usr/bin/chromedriver ]; then
             sudo ln -s /usr/lib/chromium-browser/chromedriver /usr/bin/chromedriver
           fi
 
