--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,9 +25,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y chromium-browser
           sudo apt-get install -y chromium-chromedriver
-          if [ ! -L /usr/bin/chromedriver ]; then
-            sudo ln -s /usr/lib/chromium-browser/chromedriver /usr/bin/chromedriver
-          fi
+
+      - name: 🔍 Verificar que Chromedriver está disponible
+        run: chromedriver --version
 
       - name: 🔐 Exportar contraseña de email desde Secret
         run: echo "EMAIL_ACCESS_CODE=${{ secrets.EMAIL_ACCESS_CODE }}" >> $GITHUB_ENV
