--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: 🧪 Diagnóstico de chromedriver
+        run: |
+          echo "Comprobando ubicación de chromedriver..."
+          which chromedriver || echo "chromedriver no está en el PATH"
+          chromedriver --version || echo "chromedriver no se puede ejecutar"
+          find / -name chromedriver 2>/dev/null || echo "No encontrado en el sistema"
+
       - name: 📦 Instalar dependencias y Chromium
         run: |
           python -m pip install --upgrade pip
